syntax = "proto3";

option go_package = "./pb";

package pb;

message UserRegisterReq {
    string username = 1;
    string password = 2;
}

message UserRegisterResp {
    bool flag = 1;
    string description = 2;
}

message UserLoginReq {
    string username = 1;
    string password = 2;
}

message UserLoginResp {
    int32 id = 1;
    string xid = 2;
    string username = 3;
}

message UserGetInfoReq{
    string xid = 1;
}

message UserGetInfoResp {
    int32 id = 1;
    string xid = 2;
    string username = 3;
}

// service
service usercenter {
    rpc UserRegister(UserRegisterReq) returns(UserRegisterResp);
    rpc UserLogin(UserLoginReq) returns(UserLoginResp);
    rpc UserGetInfo(UserGetInfoReq) returns(UserGetInfoResp);
}